# pyfusion

./: .gitignore  README.md  pyproject.toml
jupyter/: README.md  ced.ipynb  ced_dmri.ipynb  ced_dmrii_poc.ipynb  ced_explanation.ipynb  ced_standard.ipynb  ced_standard_dmri_poc.ipynb  eed.ipynb  eed_dmri.ipynb
jupyter/CED/: ced.ipynb  ced_dmri.ipynb  ced_poc.ipynb
src/pyfusion/: _format_validation.py  cli.py  gaussian.py  loading.py  plotting.py
src/pyfusion/alg/: dmri.py  tf_diffusion.py
src/pyfusion/algs/: eed.py
src/pyfusion/data/: load.py
src/pyfusion/structs/: formats.py  math.py  validation_utils.py
src/pyfusion/utils/: operations.py  projection.py  structs.py
tests/: test_projection.py
