[project]
name = "pyfusion"
version = "0.1.0"
description = ""
authors = [
    {name = "Candy",email = "jan.kandyba@uni-bonn.de"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.2.5,<3.0.0)"
]

[tool.poetry]
packages = [{include = "pyfusion", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pyfusion = "pyfusion.cli:cli"
